--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,87 +1,178 @@
+<div class=" d-flex justify-content-between p-3">
 
-  <div class=" d-flex justify-content-between p-3">
+  <!-- left data  -->
+  <div class=" d-flex align-items-center col-6 me-4" style="font-size: 9px;">
 
-    <!-- left data  -->
-    <div class=" d-flex align-items-center col-6 me-4" style="font-size: 9px;">
-
-      <div class="border-end pe-2">
-        <h6 class="text-center fw-bold mb-2">Communidad</h6>
-        <div style="color: red;" class="line text-nowrap">Perdida: MX0.00</div>
-        <div class="text-nowrap">Comision: MX 1,525.20</div>
-      </div>
-
-      <div class="border-end p-2">
-        <h6 class="text-center fw-bold mb-2">Instalado</h6>
-        <div class="line text-nowrap">30 Dias:MX33.140.00</div>
-        <div class="text-nowrap">En Semena: MX990.00</div>
-      </div>
-
-      <div class="border-end p-2">
-        <h6 class="text-center fw-bold mb-2">Cancelado</h6>
-        <div style="color: red;" class="line text-nowrap">En Semana: MX0.00</div>
-        <div style="color: red;" class="text-nowrap">Semana Ant: MX480.00</div>
-      </div>
-
-      <div class="p-2">
-        <h6 class="text-center fw-bold mb-2">Caidas</h6>
-        <div style="color: red;" class="line text-wrap">En Semana: 0</div>
-        <div style="color: red;" class="text-nowrap">Sem Anterior: 0</div>
-      </div>
-
-      <div>
-        <img src="../../assets/images/An blue turquoise lotus emitting a bright blue lig 1 1.png" width="61" height="43"
-          alt="blue flower" class="d-block me-5"/>
-      </div>
+    <div class="border-end pe-2">
+      <h6 class="text-center fw-bold mb-2">Communidad</h6>
+      <div style="color: red;" class="line text-nowrap">Perdida: MX0.00</div>
+      <div class="text-nowrap">Comision: MX 1,525.20</div>
     </div>
 
-    <!-- rightside icons  -->
-    <div class="d-flex justify-content-end align-items-center">
-      <!-- theme toggle  -->
-      <div class="app-navbar-item me-3">
-        <label class="switch">
-          <input type="checkbox">
-          <span class="slider round"></span>
-        </label>
-      </div>
+    <div class="border-end p-2">
+      <h6 class="text-center fw-bold mb-2">Instalado</h6>
+      <div class="line text-nowrap">30 Dias:MX33.140.00</div>
+      <div class="text-nowrap">En Semena: MX990.00</div>
+    </div>
 
+    <div class="border-end p-2">
+      <h6 class="text-center fw-bold mb-2">Cancelado</h6>
+      <div style="color: red;" class="line text-nowrap">En Semana: MX0.00</div>
+      <div style="color: red;" class="text-nowrap">Semana Ant: MX480.00</div>
+    </div>
 
+    <div class="p-2">
+      <h6 class="text-center fw-bold mb-2">Caidas</h6>
+      <div style="color: red;" class="line text-wrap">En Semana: 0</div>
+      <div style="color: red;" class="text-nowrap">Sem Anterior: 0</div>
+    </div>
+
+    <div>
+      <img src="../../assets/images/An blue turquoise lotus emitting a bright blue lig 1 1.png" width="61" height="43"
+        alt="blue flower" class="d-block me-5" />
+    </div>
+  </div>
+
+  <!-- rightside icons  -->
+  <div class="d-flex justify-content-end align-items-center">
+    <!-- theme toggle  -->
+    <div class="app-navbar-item me-3">
+      <label class="switch">
+        <input type="checkbox">
+        <span class="theme slider round"></span>
+      </label>
+    </div>
+
+    <!-- checklist button  -->
+    <div class="dropdown">
       <button class="app-navbar-item me-1">
         <img src="../../assets/images/icons/Vector (4).png" height="18" width="18" />
       </button>
+    </div>
 
+    <!-- calendar button  -->
+    <div class="dropdown">
       <button class="app-navbar-item me-1">
         <img src="../../assets/images/icons/calender.png" height="18" width="18" />
       </button>
+    </div>
 
+    <!-- whatsapp button  -->
+    <div class="dropdown">
       <button class="app-navbar-item me-1">
         <img src="../../assets/images/icons/whatsapp.png" height="18" width="18" />
       </button>
+    </div>
 
-
+    <!-- chat button  -->
+    <div class="dropdown">
       <button class="app-navbar-item me-1">
         <img src="../../assets/images/icons/chat.png" height="18" width="18" />
       </button>
+      <div class="dropdown-menu">
+        lorem ipsum
+      </div>
+    </div>
 
-      <button class="d-block me-2 d-flex align-items-start">
-        <img src="../../assets/images/icons/notification.png" height="18" width="18" />
+    <!-- notification button  -->
+    <div class="dropdown">
+      <button class="d-block me-2 d-flex align-items-center dropdown-toggle" data-bs-toggle="dropdown">
+        <i class="bi bi-bell-fill fs-6"></i>
         <span class="badge notbadge rounded-circle">1</span>
       </button>
-      <!-- login button  -->
-      <div class="dropdown">
-        <button type="button" class="but dropdown-toggle d-flex align-items-center pe-2 text-light-emphasis"
-          data-bs-toggle="dropdown">
-          <div class="d-flex align-items-end">
-            <img class="rounded-circle" width="30" height="30" src="../../assets/images/avatar/Ellipse 1.png" alt="">
-            <span class="badge rounded-circle userbadge me-1">1</span>
+      <div class="dropdown-menu p-0">
+        <div style="background-color: #33b5ff;" class="d-flex justify-content-between p-2 rounded-top-3">
+          <div class="d-flex">
+            <h4 class="text-white fw-bold me-2">Notifications</h4>
+            <span class="badge rounded-pill bg-success me-4" style="height: 24px; width:45px">+245</span>
           </div>
-          Andrea
-          <a href="#"><i class="bi bi-chevron-down fs-5 text-black mx-2"></i></a>
-        </button>
-        <div class="dropdown-menu">
-          Login form
+          <div class="d-flex">
+            <label class="switch me-2">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <i class="bi bi-gear text-white me-2"></i>
+            <i class="bi bi-x text-white"></i>
+          </div>
         </div>
+        <div class="bg-secondary-subtle p-2 d-flex justify-content-center">
+          <a>Mark all as read (264)</a>
+        </div>
+        <!-- notifications  -->
+        <div class="d-flex mt-2 border-bottom">
+          <i class="bi bi-dot fs-2" style="color: #33b5ff"></i>
+          <div>
+            <p style="font-size: 10px; margin: 0;">You have installed $33010 and your lock has been unlocked, keep it
+              open to commission your unlocks...</p>
+            <div class="d-flex align-items-start">
+              <p class="greytext" style="font-size: 10px;">2 days ago</p>
+              <i class="bi bi-dot mx-1 fs-3 greytext"></i>
+              <a class="text-decoration-none" style="color: #33b5ff ; font-size: 10px;">Mark as read</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-flex mt-2 border-bottom">
+          <i class="bi bi-dot fs-2" style="color: #33b5ff"></i>
+          <div>
+            <p style="font-size: 10px; margin: 0;">You have installed $33010 and your lock has been unlocked, keep it
+              open to commission your unlocks...</p>
+            <div class="d-flex align-items-start">
+              <p class="greytext" style="font-size: 10px;">2 days ago</p>
+              <i class="bi bi-dot mx-1 fs-3 greytext"></i>
+              <a class="text-decoration-none" style="color: #33b5ff ; font-size: 10px;">Mark as read</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-flex mt-2 border-bottom">
+          <i class="bi bi-dot fs-2" style="color: #33b5ff"></i>
+          <div>
+            <p style="font-size: 10px; margin: 0;">You have installed $33010 and your lock has been unlocked, keep it
+              open to commission your unlocks...</p>
+            <div class="d-flex align-items-start">
+              <p class="greytext" style="font-size: 10px;">2 days ago</p>
+              <i class="bi bi-dot mx-1 fs-3 greytext"></i>
+              <a class="text-decoration-none" style="color: #33b5ff ; font-size: 10px;">Mark as read</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-flex mt-2">
+          <i class="bi bi-dot fs-2" style="color: #33b5ff"></i>
+          <div>
+            <p style="font-size: 10px; margin: 0;">You have installed $33010 and your lock has been unlocked, keep it
+              open to commission your unlocks...</p>
+            <div class="d-flex align-items-start">
+              <p class="greytext" style="font-size: 10px;">2 days ago</p>
+              <i class="bi bi-dot mx-1 fs-3 greytext"></i>
+              <a class="text-decoration-none" style="color: #33b5ff ; font-size: 10px;">Mark as read</a>
+            </div>
+          </div>
+        </div>
+      <!-- button  -->
+      <div class="d-flex justify-content-end m-3">
+      <button class="chartnav next" type="button"> View all notifiations </button>
       </div>
-
-
+      </div>
     </div>
+
+    <!-- login button  -->
+    <div class="dropdown">
+      <button type="button" class="but dropdown-toggle d-flex align-items-center pe-2 text-light-emphasis"
+        data-bs-toggle="dropdown">
+        <div class="d-flex align-items-end">
+          <img class="rounded-circle" width="30" height="30" src="../../assets/images/avatar/Ellipse 1.png" alt="">
+          <span class="badge rounded-circle userbadge me-1">1</span>
+        </div>
+        Andrea
+        <a href="#"><i class="bi bi-chevron-down fs-5 text-black mx-2"></i></a>
+      </button>
+      <div class="dropdown-menu">
+        Login form
+      </div>
+    </div>
+
+
   </div>
+</div>
