--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,18 +9,6 @@ p {
     font-size: 8px;
 }
 
-.notbadge {
-    background: red;
-    color: white;
-    font-size: 5px;
-  }
-  
-
-  .userbadge {
-    background: #66FD75;
-    font-size: 5px;
-  }
-
   .offline {
     background: gray;
     font-size: 5px;
@@ -65,11 +53,13 @@ p {
 .theme:before {
     position: absolute;
     content: "";
-    height: 25px;
-    width: 25px;
+    height: 22px;
+    width: 22px;
     left: 1px;
     bottom: 0px;
     background-image: url(../../assets/images/icons/Frame\ 73.png);
+    background-size: contain;
+    background-position: center;
     -webkit-transition: .3s;
     transition: .3s;
   
@@ -145,3 +135,18 @@ border: none;
 .search::-webkit-input-placeholder { 
     font-size: 14px;
   }
+
+  #checklist {
+    position: absolute;
+    margin: 0px;
+    transform: translate(0px, 80px);
+  }
+
+  .fading-border {
+    width: 4px;
+    height: 50px;
+    border-left: 3px solid transparent;
+    background-image: linear-gradient(to bottom, transparent,grey, transparent);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
