--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,7 +43,7 @@
   <div class="d-flex justify-content-end align-items-center">
     <!-- theme toggle  -->
     <div class="app-navbar-item me-3">
-      <label class="switch">
+      <label class="switch" (click)="toggleTheme()">
         <input type="checkbox">
         <span class="theme slider round"></span>
       </label>
