--- a/src/app/mi-ingresos/mi-ingresos.component.html
+++ b/src/app/mi-ingresos/mi-ingresos.component.html
@@ -7,8 +7,8 @@
 
 <div class="main container-fluid p-3">
   <div class="top20 p-5 m-3 d-flex justify-content-center">
-    <img src="../../assets/images/ingresos.png" width="625" height="300" alt="">
-  </div>
+    <app-ingresos-chart></app-ingresos-chart>
+    </div>
 
   <div class="top20  p-5 m-3 d-flex  flex-column justify-content-center">
     <!-- table  -->
