--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -1,5 +1,5 @@
 <!-- page title  -->
-<div class="d-flex border p-3 align-items-baseline">
+<div class="d-flex border p-3 align-items-baseline bg-secondary">
     <h2 class="fw-medium">Mi Perfile</h2>
     <h4 class="ms-3 title fw-light greytext">Administracion de perfile</h4>
 </div>
