--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -14,10 +14,10 @@
 
 
     <!-- menu  -->
-    <ul class="nav nav-pills p-3 flex-column mb-auto">
+    <ul class="nav nav-pills py-3 flex-column mb-auto">
         <!-- Dashboard -->
         <li class="nav-item">
-            <a class="nav-link text-white active" routerLink="">
+            <a class="nav-link text-white" routerLink="" routerLinkActive="active">
                 <i class="bi bi-person-fill me-2 fs-5"></i>Mi
                 Perfile
             </a>
@@ -25,21 +25,21 @@
 
         <!-- Layout builder -->
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="capturadeventa">
+            <a class="nav-link text-white" routerLink="capturadeventa" routerLinkActive="active">
                 <img src="../../assets/images/icons/Vector (1).png" width="16" height="16" class="me-2"
                     alt="user icon">Captura Venta
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="" routerLinkActive="active">
+            <a class="nav-link text-white" routerLink="oc" routerLinkActive="active">
                 <img src="../../assets/images/icons/Vector (1).png" width="16" height="16" class="me-2"
                     alt="user icon">Captura Venta OC
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="" routerLinkActive="active">
+            <a class="nav-link text-white" routerLink="ventas" routerLinkActive="active">
                 <img src="../../assets/images/icons/Group 1.png" width="16" height="16" class="me-2"
                     alt="user icon">Ventas
             </a>
@@ -79,7 +79,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="" routerLinkActive="active">
+            <a class="nav-link text-white" routerLink="reportes" routerLinkActive="active">
                 <img src="../../assets/images/icons/Group 3.png" width="16" height="16" class="me-2"
                     alt="user icon">Reportes
             </a>
