--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid m-0 p-0">
+<div class="container-fluid m-0 p-0" ></div>>
   <div class="d-flex flex-column">
     <div class="d-flex align-items-center">
       <!-- logo  -->
