--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -5,19 +5,27 @@ height: 90;
 
 
 li a:hover {
-    background-image: linear-gradient(to right,rgba(0, 158, 247, 0.2), rgba(0, 158, 247, 0));
- border-left: 8px solid rgba(0, 158, 247, 1) ;
+ background-image: url(../../assets/images/icons/hover.png);
+ 
 }
 
-.bi:hover {
-    color: #3AB6FB;
+.bi:hover, .bi.active {
+    color: #3AB6FB !important;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    background-color: transparent;
-    background-image: linear-gradient(to right,rgba(0, 158, 247, 0.2), rgba(0, 158, 247, 0));
- border-left: 8px solid rgba(0, 158, 247, 1) ;
+.nav-pills .nav-link:hover, .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+ background-color: transparent;
+ 
+ background-image: url(../../assets/images/icons/hover.png);
+ line-height: 45px;
+ background-size: contain;
+ background-position: center;
+ background-repeat: no-repeat;
+
 }
+
+
+
 
 
 .searchbox {
